# rust_quant

./: .cursorignore  .dockerignore  .env.local  .env.test_run  .env_test  .gitignore  ACHIEVEMENT_FINAL.md  AGENTS.md  AGENT_PROGRESS.md  ALL_TASKS_FINAL_SUMMARY.md  ALL_WORK_COMPLETE.txt  ARCHITECTURE_AUDIT_REPORT.md  ARCHITECTURE_IMPROVEMENT_COMPLETE.md  ARCHITECTURE_IMPROVEMENT_PROGRESS.md  ARCHITECTURE_MIGRATION_COMPLETE.md  ARCHITECTURE_MIGRATION_FINAL_DELIVERY.md  ARCHITECTURE_MIGRATION_REVIEW.md  ARCHITECTURE_OPTIMIZATION_COMPLETE.md  ARCHITECTURE_PROS_AND_CONS.md  ARCHITECTURE_REVIEW_SUMMARY.md  AUDIT_SUMMARY.md  BUSINESS_LOGIC_COMPARISON.md  CIRCULAR_DEPENDENCY_SOLUTION.md  COMPREHENSIVE_COMPLETION_REPORT.md  CONGRATULATIONS.md  Cargo.toml  Cargo.toml.backup  Cargo.toml.root  DELIVERY_SUMMARY.txt  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.runtime  Dockerfile.runtime.dockerignore  EXECUTION_SUMMARY.md  FINAL_100_PERCENT_COMPLETE.md  FINAL_ACHIEVEMENT_SUMMARY.md  FINAL_DELIVERY.md  FINAL_DELIVERY_COMPLETE.txt  FINAL_HANDOVER.md  FINAL_MIGRATION_STATUS.md  (+94 more)
crates/ai-analysis/: Cargo.toml
crates/ai-analysis/src/: lib.rs  news_prompt.rs
crates/ai-analysis/tests/: news_prompt.rs
crates/analytics/: Cargo.toml
crates/analytics/src/: lib.rs  monte_carlo.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/tests/: mysql_runtime_tokens.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/tests/: external_market_snapshot.rs  market_rank_event.rs
crates/execution/: Cargo.toml
crates/execution/src/: lib.rs
crates/indicators/: Cargo.toml
crates/indicators/src/: lib.rs
crates/indicators/tests/: volume_profile_indicator.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/tests/: dune_client.rs  hyperliquid_adapter.rs  quant_core_backtest_repository.rs  quant_core_candle_repository.rs  quant_core_exchange_symbol_repository.rs  quant_core_external_market_snapshot_repository.rs  quant_core_strategy_config_repository.rs
crates/market/: Cargo.toml
crates/market/src/: lib.rs
crates/market/tests/: integration_test.rs
crates/orchestration/: Cargo.toml
crates/orchestration/examples/: check_client_traits.rs  run_deep_stream.rs  run_monitor.rs
crates/orchestration/src/: lib.rs
crates/risk/: Cargo.toml
crates/risk/src/: legacy_signed_read_only.rs  lib.rs
crates/rust-quant-cli/: Cargo.toml
crates/rust-quant-cli/examples/: analyze_regression.rs  live_parity_replay.rs  monte_carlo.rs  run_dune_external_sync.rs  run_vegas_factor_research.rs  verify_funding_rate.rs
crates/rust-quant-cli/src/: lib.rs  main.rs
crates/rust-quant-cli/tests/: internal_backtest_api.rs  pre_major_listing_announcement_to_capture_cli.rs  pre_major_listing_capture_probe_cli.rs  pre_major_listing_historical_replay_cli.rs  pre_major_listing_paper_acceptance_cli.rs  pre_major_listing_paper_samples_from_probe_cli.rs
crates/services/: Cargo.toml
crates/services/src/: lib.rs
crates/services/tests/: binance_connectivity_script_contract.rs  binance_kline_smoke.rs  binance_live_eth_micro_order_smoke_contract.rs  binance_live_order_smoke_contract.rs  binance_live_strategy_contract.rs  binance_natural_probe_candidate_contract.rs  binance_natural_websocket_contract.rs  binance_websocket_mapping.rs  binance_websocket_smoke.rs  bsc_event_arb_snapshot.rs  dune_market_sync.rs  exchange_symbol_sync_contract.rs  execution_reconciliation_snapshot_check_contract.rs  execution_worker_capability_cross_surface_contract.rs  execution_worker_live_capability_matrix.rs  execution_worker_local_preflight_contract.rs  execution_worker_reconciliation_contract.rs  external_market_sync.rs  full_product_health_news_evidence_contract.rs  full_product_health_producer_registry_contract.rs  live_strategy_quant_core_contract.rs  local_service_health_contract.rs  market_velocity_okx_config_apply_contract.rs  market_velocity_okx_config_plan_contract.rs  market_velocity_okx_live_preflight_contract.rs  market_velocity_okx_post_trade_monitor_contract.rs  market_velocity_okx_readiness_recovery_contract.rs  market_velocity_okx_scoped_live_worker_contract.rs  market_velocity_okx_scoped_live_worker_history_contract.rs  market_velocity_okx_scoped_live_worker_post_run_contract.rs  market_velocity_okx_scoped_live_worker_pre_worker_contract.rs  market_velocity_okx_signal_replay_contract.rs  market_velocity_production_deploy_contract.rs  market_velocity_signal_candidate_contract.rs  okx_simulated_order_flow.rs  okx_simulated_trade_bucket_rebalance.rs  postgres_active_entrypoints_contract.rs  pre_major_listing_perp_catchup.rs  quant_core_audit_postgres_smoke.rs  run_all_exchange_symbol_sync_contract.sh  (+4 more)
crates/strategies/: COMPLETE_ITERATION_SUMMARY.md  Cargo.toml  RANGE_BREAKOUT_DROP_FINAL_DIAGNOSIS.md  RANGE_BREAKOUT_DROP_FINAL_REPORT.md  RANGE_BREAKOUT_DROP_ITERATION.md  RANGE_BREAKOUT_DROP_ITERATION_2_REPORT.md  RANGE_BREAKOUT_DROP_ITERATION_3_REPORT.md  RANGE_BREAKOUT_DROP_ITERATION_REPORT.md  STRATEGY_ITERATION_PAUSE_EVALUATION.md
crates/strategies/examples/: check_historical_data.rs  dual_ema_cross_exploration.rs  mean_reversion_exploration.rs  mean_reversion_improve_profit.rs  mean_reversion_optimization.rs  range_breakout_drop_aggressive.rs  range_breakout_drop_analysis.rs  range_breakout_drop_backtest.rs  range_breakout_drop_ema_filter_test.rs  range_breakout_drop_final.rs  range_breakout_drop_final_v3.rs  range_breakout_drop_grid_search.rs  range_breakout_drop_long_period.rs  range_breakout_drop_optimization.rs  range_breakout_drop_raw_analysis.rs  range_breakout_drop_risk_analysis.rs  range_breakout_drop_segment_analysis.rs  range_breakout_drop_simplified.rs  range_breakout_drop_trade_detail.rs  range_breakout_drop_tuning.rs  range_breakout_drop_zero_cooldown.rs  test_evaluate_logic.rs  trend_breakout_exploration.rs  vegas_enhanced_exploration.rs  vegas_enhanced_v2.rs  vegas_like_exploration.rs
crates/strategies/src/: lib.rs
crates/strategies/tests/: bsc_event_arb.rs  (+12 more)
rust-quant-cli/: Cargo.toml
rust-quant-cli/src/: main.rs
(+1334 files in other folders)
