[package]
name = "rust_quant"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["okx"]
#[profile.release]
#debug = true




[workspace.dependencies]
# okx = { path = "./okx" }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "full"] }
reqwest = "0.11.27"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"

hmac = "0.12.1"
sha2 = "0.10.8"
chrono = "0.4.38"
hex = "0.4.3"
anyhow = "1.0.86"
base64 = "0.21.7"
thiserror = "1.0.61"

rbs = { version = "4.5" }
#rbdc-sqlite = { version = "4.5", default-features = false, features = ["tls-native-tls"] }
rbdc-mysql = { version = "4.5", default-features = false, features = ["tls-native-tls"] }
#rbdc-pg={version="4.5", default-features = false, features = ["tls-native-tls"]}
#rbdc-mssql={version="4.5", default-features = false, features = ["tls-native-tls"]}
rbatis = { version = "4.5", features = ["debug_mode"] }

log = "0.4"
fast_log = "1.6"
clap = { version = "4.5.4", features = ["derive"] }

tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-channel = "0.3.30"
futures-util = "0.3.30"
env_logger = "0.11.3"

tracing = "0.1"
tracing-subscriber = "0.3.0"
tracing-appender = "0.2.3"
hmac-sha256 = "0.1"
dotenv = "0.15.0"
ta = "0.5.0"
futures = "0.3.30"
redis = { version = "0.25.3", features = ["aio", "tokio-comp"] }

[dependencies]
okx = { path = "./okx" }
anyhow = "1.0.86"
base64 = "0.21.7"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.3"

fast_log = "1.6"
flexi_logger = "0.28.3"

futures = "0.3.30"
futures-channel = "0.3.30"
futures-util = "0.3.30"
hex = "0.4.3"
hmac = "0.12.1"
hmac-sha256 = "0.1"
lazy_static = "1.4.0"

#邮件服务
lettre = "0.11"

log = "0.4"
once_cell = "1.19.0"
#rbdc-pg={version="4.5", default-features = false, features = ["tls-native-tls"]}
#rbdc-mssql={version="4.5", default-features = false, features = ["tls-native-tls"]}
rbatis = { version = "4.5" }
#rbdc-sqlite = { version = "4.5", default-features = false, features = ["tls-native-tls"] }
rbdc-mysql = { version = "4.5", default-features = false, features = ["tls-native-tls"] }

rbs = { version = "4.5" }
redis = { version = "0.25.3", features = ["aio", "tokio-comp"] }
reqwest = "0.11.27"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
ta = "0.5.0"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "full"] }

tokio-retry = "0.3.0"

tokio-tungstenite = { version = "0.23", features = ["native-tls"] }

tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.0", features = ["env-filter", "json"] }
ndarray = "0.15"  # 用于数值计算

technical_indicators = "0.5.0"
tech_analysis = "0.1.1"
simple_moving_average = "1.0.2"
linregress = "0.5.4"
async-trait = "0.1.81"
approx = "0.5.1"
float-cmp = "0.10.0"

# 定时任务调度库
tokio-cron-scheduler = { version = "0.10.0", features = ["signal"] }
uuid = { version = "1.4.1", features = ["v4"] }


