[package]
name = "rust_quant"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
rust-version = "1.89.0"
[workspace]
members = ["okx"]
#[profile.release]
#debug = true

[workspace.dependencies]
okx = { path = "./okx" }
tokio = { version = "1.37.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "full",
] }
reqwest = "0.11.27"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"

hmac = "0.12.1"
sha2 = "0.10.8"
chrono = "0.4.38"
hex = "0.4.3"
anyhow = "1.0.86"
base64 = "0.21.7"
thiserror = "1.0.61"

rbs = { version = "4.5" }
rbdc-mysql = { version = "4.5", default-features = false, features = [
    "tls-native-tls",
] }
rbatis = { version = "4.5" }

log = "0.4"
fast_log = "1.6"
clap = { version = "4.5.4", features = ["derive"] }

tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-channel = "0.3.30"
futures-util = "0.3.30"
env_logger = "0.11.3"

tracing = "0.1"
tracing-subscriber = "0.3.0"
tracing-appender = "0.2.3"
hmac-sha256 = "0.1"
dotenv = "0.15.0"
ta = "0.5.0"
futures = "0.3.30"
redis = { version = "0.25.3", features = ["aio", "tokio-comp"] }

# 仅根 crate 使用或需要集中管理的依赖
flexi_logger = "0.28.3"
lazy_static = "1.4.0"
lettre = "0.11"
once_cell = "1.19.0"
tokio-retry = "0.3.0"
ndarray = "0.15"
technical_indicators = "0.5.0"
tech_analysis = "0.1.1"
simple_moving_average = "1.0.2"
linregress = "0.5.4"
async-trait = "0.1.81"
approx = "0.5.1"
float-cmp = "0.10.0"
tokio-cron-scheduler = { version = "0.10.0", features = ["signal"] }
uuid = { version = "1.4.1", features = ["v4"] }
dashmap = "6.1.0"
[dependencies]
okx = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }

fast_log = { workspace = true }
flexi_logger = { workspace = true }

futures = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
hmac-sha256 = { workspace = true }
lazy_static = { workspace = true }

# 邮件服务
lettre = { workspace = true }

log = { workspace = true }
once_cell = { workspace = true }
rbatis = { workspace = true }
rbdc-mysql = { workspace = true }
rbs = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ta = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

tokio-retry = { workspace = true }
tokio-tungstenite = { workspace = true }

tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
ndarray = { workspace = true }                                               # 用于数值计算

technical_indicators = { workspace = true }
tech_analysis = { workspace = true }
simple_moving_average = { workspace = true }
linregress = { workspace = true }
async-trait = { workspace = true }
approx = { workspace = true }
float-cmp = { workspace = true }

# 定时任务调度库
tokio-cron-scheduler = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
