[workspace]
members = [
    "crates/common",
    "crates/core",
    "crates/domain",           # 新增: 领域模型层
    "crates/infrastructure",   # 新增: 基础设施层
    "crates/market",
    "crates/indicators",
    "crates/strategies",
    "crates/risk",
    "crates/execution",
    "crates/orchestration",
    "crates/analytics",
    "crates/ai-analysis",
    "rust-quant-cli",
]

resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Rust Quant Team"]
license = "MIT"

[workspace.dependencies]
# === 核心依赖 ===
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "full"] }
anyhow = "1.0.86"
thiserror = "1.0.61"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
async-trait = "0.1.81"

# === 日志和追踪 ===
tracing = "0.1"
tracing-subscriber = { version = "0.3.0", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
log = "0.4"
fast_log = "1.6"
env_logger = "0.11.3"

# === 数据库（使用 sqlx 替代 rbatis）===
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "chrono", "json", "migrate"] }

# === 缓存 ===
redis = { version = "0.25.3", features = ["aio", "tokio-comp"] }
dashmap = "6.1.0"

# === 时间处理 ===
chrono = { version = "0.4.38", features = ["serde"] }

# === 网络通信 ===
reqwest = { version = "0.11.27", features = ["json"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures = "0.3.30"
futures-channel = "0.3.30"
futures-util = "0.3.30"

# === 加密和编码 ===
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
base64 = "0.21.7"

# === 配置管理 ===
dotenv = "0.15.0"
once_cell = "1.19.0"

# === 任务调度 ===
tokio-cron-scheduler = { version = "0.10.0", features = ["signal"] }
tokio-retry = "0.3.0"

# === 技术分析库 ===
ta = "0.5.0"

# === 数值计算 ===
ndarray = "0.15"
linregress = "0.5.4"
approx = "0.5.1"
float-cmp = "0.10.0"

# === 工具库 ===
uuid = { version = "1.4.1", features = ["v4"] }
lazy_static = "1.4.0"
clap = { version = "4.5.4", features = ["derive"] }

# === 交易所 SDK ===
okx = { version = "0.1.9" }

# === 邮件服务 ===
lettre = "0.11"

# === AI 和 NLP（新增）===
# OpenAI API 客户端
async-openai = "0.20"
# HTTP 客户端（用于新闻API调用）
# 已包含在 reqwest 中

# === Workspace 内部依赖 ===
rust-quant-common = { path = "crates/common" }
rust-quant-core = { path = "crates/core" }
rust-quant-domain = { path = "crates/domain" }              # 新增
rust-quant-infrastructure = { path = "crates/infrastructure" }  # 新增
rust-quant-market = { path = "crates/market" }
rust-quant-indicators = { path = "crates/indicators" }
rust-quant-strategies = { path = "crates/strategies" }
rust-quant-risk = { path = "crates/risk" }
rust-quant-execution = { path = "crates/execution" }
rust-quant-orchestration = { path = "crates/orchestration" }
rust-quant-analytics = { path = "crates/analytics" }
rust-quant-ai-analysis = { path = "crates/ai-analysis" }
