[package]
name = "rust-quant-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "rust-quant"
path = "src/main.rs"

[dependencies]
# Workspace 内部依赖
rust-quant-common.workspace = true
rust-quant-core.workspace = true
rust-quant-market.workspace = true
rust-quant-indicators.workspace = true
rust-quant-strategies.workspace = true
rust-quant-risk.workspace = true
rust-quant-execution.workspace = true
rust-quant-orchestration.workspace = true
rust-quant-analytics.workspace = true

# 外部依赖
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
dotenv.workspace = true
clap.workspace = true
