[package]
name = "rust-quant-analytics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace 内部依赖
rust-quant-common.workspace = true
rust-quant-core.workspace = true
rust-quant-strategies.workspace = true

# 外部依赖
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
chrono.workspace = true

# 数据库（使用 sqlx）
sqlx.workspace = true

# 随机数
rand = "0.8.5"
