[package]
name = "rust-quant-infrastructure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace 内部依赖
rust-quant-common.workspace = true
rust-quant-core.workspace = true
rust-quant-domain.workspace = true  # 实现 domain 中定义的接口
# ✅ 已移除违规依赖:
# - rust-quant-indicators (业务特定缓存已移至indicators包)
# - rust-quant-market (业务特定缓存已移至market包)

# 异步运行时
tokio.workspace = true
async-trait.workspace = true

# 错误处理
anyhow.workspace = true
thiserror.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true

# 数据库
sqlx.workspace = true

# 缓存
redis.workspace = true
dashmap.workspace = true

# 日志
tracing.workspace = true

# 时间处理
chrono.workspace = true

# 工具库
once_cell.workspace = true


