[package]
name = "rust-quant-market"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace 内部依赖
rust-quant-common.workspace = true
rust-quant-core.workspace = true
rust-quant-domain.workspace = true


# 外部依赖
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
rust_decimal.workspace = true


# 网络通信
reqwest.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
futures-channel.workspace = true
futures-util.workspace = true

# 交易所 SDK
okx.workspace = true

# 数据库（使用 sqlx）
sqlx.workspace = true

# 缓存依赖（latest_candle_cache需要）
redis.workspace = true
dashmap.workspace = true
once_cell.workspace = true

[dev-dependencies]
dotenv.workspace = true
