[package]
name = "rust-quant-orchestration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace 内部依赖
rust-quant-common.workspace = true
rust-quant-core.workspace = true
rust-quant-market.workspace = true
rust-quant-strategies.workspace = true
rust-quant-risk.workspace = true
rust-quant-execution.workspace = true

# 外部依赖
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true

# 任务调度
tokio-cron-scheduler.workspace = true
tokio-retry.workspace = true

# 缓存
redis.workspace = true
dashmap.workspace = true

# 交易所 SDK
okx.workspace = true

# 数据库（使用 sqlx）
sqlx.workspace = true

# 序列化
serde_json.workspace = true
futures.workspace = true
