[package]
name = "rust-quant-orchestration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace 内部依赖
rust-quant-common.workspace = true
rust-quant-core.workspace = true
rust-quant-domain.workspace = true          # 添加domain依赖
rust-quant-infrastructure.workspace = true  # 用于创建服务实例（依赖注入）
rust-quant-services.workspace = true        # ⭐ 新增: 通过services协调业务
rust-quant-market.workspace = true
rust-quant-strategies.workspace = true
rust-quant-indicators.workspace = true
rust-quant-risk.workspace = true
rust-quant-execution.workspace = true
okx.workspace = true

# 外部依赖
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true

# 任务调度
tokio-cron-scheduler.workspace = true
tokio-retry.workspace = true

# 缓存
redis.workspace = true
dashmap.workspace = true
once_cell.workspace = true

# 序列化
serde_json.workspace = true
futures.workspace = true
sqlx.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
dotenv.workspace = true
rustls = { version = "0.23", features = ["ring"] }


