[package]
name = "rust-quant-services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace 内部依赖 - 应用服务层可以依赖所有业务包
rust-quant-common.workspace = true
rust-quant-core.workspace = true
rust-quant-domain.workspace = true         # 使用领域模型
rust-quant-infrastructure.workspace = true # 使用基础设施
rust-quant-market.workspace = true
rust-quant-indicators.workspace = true
rust-quant-strategies.workspace = true
rust-quant-risk.workspace = true
rust-quant-execution.workspace = true
rust-quant-analytics.workspace = true      # 绩效分析

# 异步运行时
tokio.workspace = true
async-trait.workspace = true

# 错误处理
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true

# 日志
tracing.workspace = true

# 时间
chrono.workspace = true

# 并发容器
dashmap.workspace = true

# 数据库
sqlx.workspace = true

# 交易所 SDK
okx.workspace = true

# 缓存
redis.workspace = true
rust_decimal.workspace = true


[dev-dependencies]
dotenv.workspace = true
once_cell.workspace = true
reqwest.workspace = true
