[package]
name = "rust-quant-strategies"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace 内部依赖
rust-quant-common.workspace = true
rust-quant-core.workspace = true
rust-quant-domain.workspace = true           # 新增: 领域模型
rust-quant-infrastructure.workspace = true   # 新增: 基础设施
rust-quant-market.workspace = true
rust-quant-indicators.workspace = true
# 移除循环依赖: strategies 不应该依赖这些包
# rust-quant-risk.workspace = true
# rust-quant-execution.workspace = true
# rust-quant-orchestration.workspace = true

# 外部依赖
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
dashmap.workspace = true
once_cell.workspace = true

# 交易所 SDK
okx.workspace = true

# 技术分析库
ta.workspace = true

# 工具库
uuid.workspace = true
futures.workspace = true
futures-util.workspace = true
ndarray.workspace = true
redis.workspace = true
clap.workspace = true
log.workspace = true
